[gd_scene load_steps=7 format=3 uid="uid://cu27u2f30k1vt"]

[ext_resource type="Script" uid="uid://b4wqmeyfkxecp" path="res://TRON_TIM/scripts/level 1/quanhuyen.gd" id="1_ljver"]
[ext_resource type="SpriteFrames" uid="uid://o30wjpp5n3hd" path="res://TRON_TIM/Tileset/quanhuyen.tres" id="2_j5quk"]
[ext_resource type="Texture2D" uid="uid://dtyhfueqg6xho" path="res://TRON_TIM/assets/sprites/visioncone.png" id="3_h7p45"]
[ext_resource type="Script" uid="uid://bgmfcb7s3g52m" path="res://TRON_TIM/scripts/level 1/vision_area.gd" id="4_qir52"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1eld"]
size = Vector2(9, 25)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_dnby7"]
points = PackedVector2Array(33, 43, -101, -39, -98, 87)

[node name="quanhuyen" type="CharacterBody2D" node_paths=PackedStringArray("patrol_points")]
script = ExtResource("1_ljver")
patrol_points = [null, null, null, null, null, null, null, null]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_u1eld")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_j5quk")
animation = &"walk_up"

[node name="VisionRoot" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="VisionCone" type="TextureRect" parent="VisionRoot"]
z_index = -1
offset_left = -151.0
offset_top = -88.0
offset_right = -1.0
offset_bottom = 52.0
size_flags_horizontal = 0
texture = ExtResource("3_h7p45")
expand_mode = 5
flip_h = true

[node name="Area2D" type="Area2D" parent="VisionRoot/VisionCone"]
position = Vector2(96, 24)
script = ExtResource("4_qir52")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRoot/VisionCone/Area2D"]
position = Vector2(23, 22)
shape = SubResource("ConvexPolygonShape2D_dnby7")

[connection signal="body_entered" from="VisionRoot/VisionCone/Area2D" to="." method="_on_area_2d_body_entered"]
